# ios-notif-forward

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/package/: Cargo.toml
src/package/src/: main.rs
