[package]
name = "ios-notif-forward"
version = "0.1.0"
edition = "2021"
description = "Forward notifications from Apple devices to your desktop"
repository = "https://github.com/impiaaa/ios-notif-forward"

[dependencies]
ancs = { git = "https://github.com/impiaaa/ancs.git", rev = "b607e24" }
btleplug = "0.11.0"
futures = "0.3.28"
image = { version = "0.24.7", features = ["png"] }
notify-rust = "4.8.0"
tao = "0.22.0"
tokio = { version = "1.31.0", features = ["full"] }
tray-icon = "0.6.0"
uuid = "1.4.1"

[build-dependencies]
winres = "0.1"
iconwriter = "2.0.1"