[package]
name = "ios-notif-forward"
version = "0.1.0"
edition = "2021"
description = "Forward notifications from Apple devices to your desktop"
repository = "https://github.com/impiaaa/ios-notif-forward"

[dependencies]
ancs = { git = "https://github.com/impiaaa/ancs.git", rev = "b607e24" }
btleplug = "0.11.7"
futures = "0.3.31"
image = { version = "0.25.5", features = ["png"] }
notify-rust = "4.11.3"
tao = "0.31.1"
tokio = { version = "1.43.0", features = ["full"] }
tray-icon = "0.19.2"
uuid = "1.11.1"

[build-dependencies]
winres = "0.1"
iconwriter = "2.0.1"
