[package]
name = "package"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.43.1", features = ["full"] }
iconwriter = "2.0.1"
async-trait = "0.1.85"
derive_more = { version = "1.0.0", features = ["from"] }
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
clap = { version = "4.5.26", features = ["cargo"] }
target-spec = "3.3.1"
toml = "0.8.19"
